<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/paddingMargin16"
    android:paddingLeft="@dimen/paddingMargin16"
    android:paddingRight="@dimen/paddingMargin16"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/RegularCardText"
        android:layout_marginBottom="@dimen/paddingMargin16"
        android:text="@string/dialogBox2_title"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/paddingMargin16"
        >
        <EditText
            android:id="@+id/readingProgress_finishedPages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textExtraLarge"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slash"
            android:textSize="@dimen/textMedium"
            />
        <TextView
            android:id="@+id/readingProgress_totalPages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_bookTarget"
            android:textSize="@dimen/textMedium"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:clickable="false"
            />
        <Button
            android:id="@+id/targetCancelButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/cancel_button"
            android:textColor="@color/colorPrimary2"
            android:textAllCaps="false"
            />
        <Button
            android:id="@+id/targetUpdateButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/update_button"
            android:textColor="@color/colorPrimary2"
            android:textAllCaps="false"
            />
    </LinearLayout>
</LinearLayout>
