<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    >
<LinearLayout
    android:layout_marginBottom="20dp"
    android:id="@+id/layout_history"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/paddingMargin16"
        >
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/paddingMargin16"
            android:layout_marginEnd="@dimen/paddingMargin16"
            android:src="@drawable/medal"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            >
            <TextView
                android:id="@+id/historyBook_topLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finishedBook_topLabel"
                style="@style/SmallCardText"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginLeft="5dp"
                    android:id="@+id/historyBook_topLabel2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/paddingMargin8"
                    android:text="0"
                    android:textSize="10dp"
                    style="@style/SmallCardText"
                    />

                <TextView
                    android:layout_marginLeft="5dp"
                    android:textSize="10dp"
                    android:id="@+id/historyBook_topLabel3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/paddingMargin8"
                    android:text="day(s)"
                    style="@style/SmallCardText"
                    />

            </LinearLayout>


            <TextView
                android:id="@+id/historyBook_bookTitle"
                style="@style/RegularCardText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/paddingMargin8"
                android:maxLines="1"
                android:text="@string/placeholder_bookTitle"
                />

            <TextView
                android:id="@+id/historyBook_bookAuthor"
                style="@style/SmallCardText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_bookAuthor"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</android.support.v7.widget.CardView>
